# mission-critical-backend

./: .dockerignore  .env.example  BACKEND_API_SPEC.md  CLAUDE.md  NTFY_NOTIFICATIONS.md  TAGS_API_SPEC.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: .fuse_hidden0005f90100000007  .fuse_hidden0005f90300000008  settings.json
alembic/: env.py  script.py.mako
alembic/versions/: 20241230_000000_001_initial_user_table.py  20241231_000000_002_replace_users_with_tasks.py  20250101_000000_003_add_tags_table.py
app/: main.py  scheduler.py
app/api/v1/: router.py
app/api/v1/controllers/: tag_controller.py  task_controller.py  user_controller.py
app/api/v1/routes/: tag_routes.py  task_routes.py  user_routes.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  tag.py  task.py  user.py
app/schemas/: __init__.py  tag.py  task.py  user.py
app/services/: notification_service.py  sync_service.py  tag_service.py  task_service.py  user_service.py
tests/: __init__.py  conftest.py  test_notifications.py  test_tags.py  test_tasks.py
